--- a/BioArchLinux/r-rmysql/lilac.yaml
+++ b/BioArchLinux/r-rmysql/lilac.yaml
@@ -1,11 +1,19 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-dbi
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: RMySQL_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=RMySQL
+- source: rpkgs
+  pkgname: RMySQL
+  repo: cran
+  md5: true
 - alias: r
+- source: alpm
+  alpm: mariadb-libs
+  repo: extra
+  provided: libmariadb.so
+  strip_release: true
