--- a/BioArchLinux/r-rttf2pt1/lilac.yaml
+++ b/BioArchLinux/r-rttf2pt1/lilac.yaml
@@ -1,9 +1,10 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
-- regex: Rttf2pt1_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=Rttf2pt1
+- source: rpkgs
+  pkgname: Rttf2pt1
+  repo: cran
+  md5: true
 - alias: r
