r-extrafont: use metadata checks

--- a/BioArchLinux/r-extrafont/lilac.yaml
+++ b/BioArchLinux/r-extrafont/lilac.yaml
@@ -1,12 +1,13 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-extrafontdb
 - r-rttf2pt1
 update_on:
-- regex: extrafont_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=extrafont
+- source: rpkgs
+  pkgname: extrafont
+  repo: cran
+  md5: true
 - alias: r
