--- a/BioArchLinux/r-extrafont/PKGBUILD
+++ b/BioArchLinux/r-extrafont/PKGBUILD
@@ -1,16 +1,17 @@
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
+# Contributor: Viktor Drobot (aka dviktor) linux776 [at] gmail [dot] com
 
 _pkgname=extrafont
 _pkgver=0.19
 pkgname=r-${_pkgname,,}
-pkgver=0.19
+pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc='Tools for using fonts'
-arch=('any')
+pkgdesc="Tools for Using Fonts"
+arch=(any)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+license=(GPL2)
 depends=(
-  r
   r-extrafontdb
   r-rttf2pt1
 )
@@ -18,14 +19,15 @@ optdepends=(
   r-fontcm
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('5b65dd0344de4d5e99842c602697b124')
 sha256sums=('4e8f90152df13fc5dee573222a26b4d66553493fdf6af1c7777e59521ccdab8d')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
