r-onewaytests: fix depends, use metadata checks

--- a/BioArchLinux/r-onewaytests/lilac.yaml
+++ b/BioArchLinux/r-onewaytests/lilac.yaml
@@ -1,13 +1,16 @@
 build_prefix: extra-x86_64
 maintainers:
-  - github: sukanka
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
-  - r-car
-  - r-ggplot2
-  - r-moments
-  - r-nortest
+- r-car
+- r-ggplot2
+- r-moments
+- r-nortest
+- r-wesanderson
 update_on:
-  - regex: onewaytests_([\d._-]+).tar.gz
-    source: regex
-    url: https://cran.r-project.org/package=onewaytests
-  - alias: r
+- source: rpkgs
+  pkgname: onewaytests
+  repo: cran
+  md5: true
+- alias: r
