r-plyr: fix contributors from AUR 3

--- a/BioArchLinux/r-plyr/PKGBUILD
+++ b/BioArchLinux/r-plyr/PKGBUILD
@@ -3,6 +3,7 @@
 # Contributor: Viktor Drobot (aka dviktor) linux776 [at] gmail [dot] com
 # Contributor: Matt Frichtl <frichtlm@gmail.com>
 # Contributor: wagnerflo <florian@wagner-flo.net>
+# Contributor: Nick B <Shirakawasuna at gmail _dot_com>
 
 _pkgname=plyr
 _pkgver=1.8.9
