--- a/BioArchLinux/snpeff/lilac.yaml
+++ b/BioArchLinux/snpeff/lilac.yaml
@@ -2,6 +2,8 @@ maintainers:
   - github: kbipinkumar
     email: kbipinkumar@pm.me
 build_prefix: extra-x86_64
+pre_build_script: |
+  run_cmd(['updpkgsums'])
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
