r-hunspell: use metadata checks

--- a/BioArchLinux/r-hunspell/lilac.yaml
+++ b/BioArchLinux/r-hunspell/lilac.yaml
@@ -1,12 +1,15 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-digest
 - r-rcpp
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: hunspell_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=hunspell
+- source: rpkgs
+  pkgname: hunspell
+  repo: cran
+  md5: true
 - alias: r
