seqan3: fix typo

--- a/BioArchLinux/seqan3/PKGBUILD
+++ b/BioArchLinux/seqan3/PKGBUILD
@@ -8,7 +8,7 @@ url="http://www.seqan.de"
 depends=()
 makedepends=('cmake' 'git' 'bzip2' 'zlib' 'glibc' 'gcc-libs' 'cereal')
 license=('CCPL' 'BSD')
-source=("git+https://github.com/seqan/seqan3.git#tag=${pkgver}"
+source=("git+https://github.com/seqan/seqan3.git#tag=${pkgver}")
 sha256sums=('SKIP')
 
 prepare (){
