shapeit4: rm extra alias

--- a/BioArchLinux/shapeit4/lilac.yaml
+++ b/BioArchLinux/shapeit4/lilac.yaml
@@ -2,17 +2,16 @@ build_prefix: extra-x86_64
 maintainers:
   - github: starsareintherose
     email: kuoi@bioarchlinux.org
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
+  run_cmd(['updpkgsums'])
+post_build_script: |
+  git_pkgbuild_commit()
 update_on:
   - source: github
     github: odelaneau/shapeit4
     use_max_tag: true
     prefix: 'v'
-  - alias: alpm-lilac
-    alpm: htslib
-    strip_release: true
-  - alias: alpm-lilac
-    alpm: seqlib
-    strip_release: true
   - alias: libssl
 repo_makedepends:
   - htslib
