--- a/BioArchLinux/r-s4vectors/lilac.yaml
+++ b/BioArchLinux/r-s4vectors/lilac.yaml
@@ -1,11 +1,12 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-biocgenerics
 update_on:
-- regex: S4Vectors_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/S4Vectors
+- source: rpkgs
+  pkgname: S4Vectors
+  repo: bioc
+  md5: true
 - alias: r
