r-findpython: use metadata checks

--- a/BioArchLinux/r-findpython/PKGBUILD
+++ b/BioArchLinux/r-findpython/PKGBUILD
@@ -1,31 +1,45 @@
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
+# Contributor: articpenguin <julia.schweinz at mailfence dot com>
 
 _pkgname=findpython
 _pkgver=1.0.8
 pkgname=r-${_pkgname,,}
-pkgver=1.0.8
+pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc='Functions to Find an Acceptable Python Binary'
-arch=('any')
+pkgdesc="Functions to Find an Acceptable Python Binary"
+arch=(any)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('MIT')
+license=(MIT)
 depends=(
   r
+)
+checkdepends=(
+  python
+  r-testthat
 )
 optdepends=(
   r-reticulate
   r-testthat
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('5ca1c2cb21b5e747182c14d92691912b')
 sha256sums=('0f8a90cbafd4949c0333a86808383a358fb7ec3268953d8a4887d5d22264cdb7')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
+}
+
+check() {
+  cd "$_pkgname/tests"
+  R_LIBS="$srcdir/build" NOT_CRAN=true Rscript --vanilla run-all.R
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
-  install -Dm644 "${_pkgname}/LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
+
+  install -d "$pkgdir/usr/share/licenses/$pkgname"
+  ln -s "/usr/lib/R/library/$_pkgname/LICENSE" "$pkgdir/usr/share/licenses/$pkgname"
 }
-# vim:set ts=2 sw=2 et:
