--- a/BioArchLinux/r-findpython/lilac.yaml
+++ b/BioArchLinux/r-findpython/lilac.yaml
@@ -1,9 +1,12 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: findpython_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=findpython
+- source: rpkgs
+  pkgname: findpython
+  repo: cran
+  md5: true
 - alias: r
