r-argparse: use metadata checks

--- a/BioArchLinux/r-argparse/lilac.yaml
+++ b/BioArchLinux/r-argparse/lilac.yaml
@@ -1,13 +1,16 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-findpython
 - r-jsonlite
 - r-r6
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: argparse_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=argparse
+- source: rpkgs
+  pkgname: argparse
+  repo: cran
+  md5: true
 - alias: r
