--- a/BioArchLinux/r-cellxgenedp/PKGBUILD
+++ b/BioArchLinux/r-cellxgenedp/PKGBUILD
@@ -1,17 +1,16 @@
-# system requirements: C++14
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
 
 _pkgname=cellxgenedp
 _pkgver=1.4.1
 pkgname=r-${_pkgname,,}
-pkgver=1.4.1
+pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc='Discover and Access Single Cell Data Sets in the cellxgene Data Portal'
-arch=('x86_64')
+pkgdesc="Discover and Access Single Cell Data Sets in the cellxgene Data Portal"
+arch=(any)
 url="https://bioconductor.org/packages/${_pkgname}"
-license=('Artistic2.0')
+license=(Artistic2.0)
 depends=(
-  r
   r-curl
   r-dplyr
   r-dt
@@ -19,6 +18,10 @@ depends=(
   r-jsonlite
   r-rjsoncons
   r-shiny
+)
+checkdepends=(
+  r-mockery
+  r-testthat
 )
 optdepends=(
   r-biocstyle
@@ -31,14 +34,20 @@ optdepends=(
   r-zellkonverter
 )
 source=("https://bioconductor.org/packages/release/bioc/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('f63ddf14244159c5cceb6a93f694f645')
 sha256sums=('b2def1afa6eef3338e722cd4c8ce057a2aaa78de7dcb82e383e7f550abf5b725')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
+}
+
+check() {
+  cd "$_pkgname/tests"
+  R_LIBS="$srcdir/build" NOT_CRAN=true Rscript --vanilla testthat.R
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
