r-ssanv: use metadata checks

--- a/BioArchLinux/r-ssanv/PKGBUILD
+++ b/BioArchLinux/r-ssanv/PKGBUILD
@@ -1,26 +1,28 @@
-# Maintainer: Kiri <kiri@vern.cc>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Kiri <kiri@vern.cc>
 
 _pkgname=ssanv
 _pkgver=1.1
 pkgname=r-${_pkgname,,}
-pkgver=${_pkgver//[:-]/.}
+pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc='Sample Size Adjusted for Nonadherence or Variability of Input Parameters'
-arch=('any')
+pkgdesc="Sample Size Adjusted for Nonadherence or Variability of Input Parameters"
+arch=(any)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+license=(GPL3)
 depends=(
   r
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('b31deb0e2ab0dbbf8ed512eb148126ef')
 sha256sums=('4dea3fefe2d9da6a3020d19dea2ebc6634df38cbce0415fb16b0d4fe5551449d')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
