--- a/BioArchLinux/r-exactci/PKGBUILD
+++ b/BioArchLinux/r-exactci/PKGBUILD
@@ -1,33 +1,40 @@
-# Maintainer: Kiri <kiri@vern.cc>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Kiri <kiri@vern.cc>
 
 _pkgname=exactci
 _pkgver=1.4-4
 pkgname=r-${_pkgname,,}
-pkgver=${_pkgver//[:-]/.}
+pkgver=${_pkgver//-/.}
 pkgrel=3
-pkgdesc='Exact P-Values and Matching Confidence Intervals for Simple Discrete Parametric Cases'
-arch=('any')
+pkgdesc="Exact P-Values and Matching Confidence Intervals for Simple Discrete Parametric Cases"
+arch=(any)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+license=(GPL3)
 depends=(
-  r
   r-ssanv
   r-testthat
 )
 optdepends=(
   r-blakerci
+  r-exact2x2
   r-knitr
   r-rmarkdown
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('447f19a10800a1e7ac09201268e83c3a')
 sha256sums=('d01c8cd298b96a9b07d1e671bc2844e339020717fd3012d217c05eada53e3e04')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
+}
+
+check() {
+  cd "$_pkgname/tests"
+  R_LIBS="$srcdir/build" NOT_CRAN=true Rscript --vanilla testthat.R
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
