r-exact2x2: use metadata checks

--- a/BioArchLinux/r-exact2x2/PKGBUILD
+++ b/BioArchLinux/r-exact2x2/PKGBUILD
@@ -1,35 +1,44 @@
-# Maintainer: Kiri <kiri@vern.cc>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Kiri <kiri@vern.cc>
 
 _pkgname=exact2x2
 _pkgver=1.6.8
 pkgname=r-${_pkgname,,}
-pkgver=${_pkgver//[:-]/.}
+pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc='Exact Tests and Confidence Intervals for 2x2 Tables'
-arch=('any')
+pkgdesc="Exact Tests and Confidence Intervals for 2x2 Tables"
+arch=(any)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+license=(GPL3)
 depends=(
-  r
   r-exactci
   r-ssanv
+)
+checkdepends=(
+  r-exact
+  r-testthat
 )
 optdepends=(
   r-exact
   r-ggplot2
-  r-grid
   r-gridextra
   r-testthat
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('8ad7aa8674eb114e77d9c3c811cf238c')
 sha256sums=('9717933a5baa86b242e1a611860f984f660c089c7b3f765fe14ca582a07b98f1')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
+}
+
+check() {
+  cd "$_pkgname/tests"
+  R_LIBS="$srcdir/build" NOT_CRAN=true Rscript --vanilla testthat.R
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
