r-hgu95av2cdf: use metadata checks

--- a/BioArchLinux/r-hgu95av2cdf/PKGBUILD
+++ b/BioArchLinux/r-hgu95av2cdf/PKGBUILD
@@ -1,27 +1,28 @@
-# Maintainer: sukanka <su975853527@gmail.com>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: sukanka <su975853527@gmail.com>
 
 _pkgname=hgu95av2cdf
 _pkgver=2.18.0
 pkgname=r-${_pkgname,,}
-pkgver=2.18.0
+pkgver=${_pkgver//-/.}
 pkgrel=3
-pkgdesc='hgu95av2cdf'
-arch=('any')
+pkgdesc="hgu95av2cdf"
+arch=(any)
 url="https://bioconductor.org/packages/${_pkgname}"
-license=('LGPL')
+license=(LGPL)
 depends=(
-  r
   r-annotationdbi
 )
 source=("https://bioconductor.org/packages/release/data/annotation/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('026bae2f76433593f75ca6c79bc9a9d0')
 sha256sums=('d449a06a2f55a5a1f942710c8da2a37a81e20342b6e600669df94ecb55f1e1fe')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
