r-pmcmr: use metadata checks

--- a/BioArchLinux/r-pmcmr/lilac.yaml
+++ b/BioArchLinux/r-pmcmr/lilac.yaml
@@ -1,16 +1,10 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: kiri2002
-pre_build_script: |
-  for line in edit_file('PKGBUILD'):
-    if line.startswith('_pkgver='):
-      line = f'_pkgver={_G.newver}'
-    print(line)
-  update_pkgver_and_pkgrel(_G.newver.replace(':', '.').replace('-', '.'))
-post_build_script: |
-  git_pkgbuild_commit()
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
 - source: rpkgs
   pkgname: PMCMR
   repo: cran
+  md5: true
 - alias: r
