r-puma: use metadata checks

--- a/BioArchLinux/r-puma/lilac.yaml
+++ b/BioArchLinux/r-puma/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: starsareintherose@outlook.com
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-affy
 - r-affyio
@@ -10,7 +10,8 @@ repo_depends:
 - r-oligo
 - r-oligoclasses
 update_on:
-- regex: puma_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/puma
+- source: rpkgs
+  pkgname: puma
+  repo: bioc
+  md5: true
 - alias: r
