--- a/BioArchLinux/r-regsem/PKGBUILD
+++ b/BioArchLinux/r-regsem/PKGBUILD
@@ -1,20 +1,24 @@
-# Maintainer: Kiri <kiri@vern.cc>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Kiri <kiri@vern.cc>
 
 _pkgname=regsem
 _pkgver=1.9.5
 pkgname=r-${_pkgname,,}
-pkgver=${_pkgver//[:-]/.}
+pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc='Regularized Structural Equation Modeling'
-arch=('x86_64')
+pkgdesc="Regularized Structural Equation Modeling"
+arch=(x86_64)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+license=(GPL)
 depends=(
-  r
+  blas
+  lapack
   r-lavaan
   r-rcpp
-  r-rcpparmadillo
   r-rsolnp
+)
+makedepends=(
+  r-rcpparmadillo
 )
 optdepends=(
   r-caret
@@ -25,7 +29,6 @@ optdepends=(
   r-knitr
   r-lbfgs
   r-markdown
-  r-mass
   r-matrixstats
   r-nlcoptim
   r-nloptr
@@ -38,14 +41,15 @@ optdepends=(
   r-stringr
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('c248f10f794c10229eba611f3e252dd4')
 sha256sums=('7392bd644efe82f96da0df470a962de398f1d0162273cba1ff31c2ecd7f17a53')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
