--- a/BioArchLinux/r-regsem/lilac.yaml
+++ b/BioArchLinux/r-regsem/lilac.yaml
@@ -1,21 +1,24 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: kiri2002
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-lavaan
 - r-rcpp
-- r-rcpparmadillo
 - r-rsolnp
-pre_build_script: |
-  for line in edit_file('PKGBUILD'):
-    if line.startswith('_pkgver='):
-      line = f'_pkgver={_G.newver}'
-    print(line)
-  update_pkgver_and_pkgrel(_G.newver.replace(':', '.').replace('-', '.'))
-post_build_script: |
-  git_pkgbuild_commit()
+repo_makedepends:
+- r-rcpparmadillo
 update_on:
 - source: rpkgs
   pkgname: regsem
   repo: cran
+  md5: true
 - alias: r
+- source: alpmfiles
+  pkgname: blas
+  filename: usr/lib/libblas\.so\.([^.]+)
+  repo: extra
+- source: alpmfiles
+  pkgname: lapack
+  filename: usr/lib/liblapack\.so\.([^.]+)
+  repo: extra
