--- a/BioArchLinux/r-affxparser/lilac.yaml
+++ b/BioArchLinux/r-affxparser/lilac.yaml
@@ -1,9 +1,10 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
-- regex: affxparser_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/affxparser
+- source: rpkgs
+  pkgname: affxparser
+  repo: bioc
+  md5: true
 - alias: r
