--- a/BioArchLinux/r-rsvg/lilac.yaml
+++ b/BioArchLinux/r-rsvg/lilac.yaml
@@ -2,6 +2,10 @@ build_prefix: extra-x86_64
 maintainers:
 - github: pekkarr
   email: pekkarr@protonmail.com
+repo_makedepends:
+- r-magick
+- r-png
+- r-testthat
 update_on:
 - source: rpkgs
   pkgname: rsvg
