phylip: rm extra exe

--- a/BioArchLinux/phylip/PKGBUILD
+++ b/BioArchLinux/phylip/PKGBUILD
@@ -39,4 +39,6 @@ package() {
   mv exe/*.so "$pkgdir"/usr/lib/
   mv exe/font* "$pkgdir"/usr/share/phylip/
   mv exe/* "$pkgdir"/usr/bin
+
+  rm $pkgdir/usr/bin/*.exe
 }
