--- a/BioArchLinux/phylip/PKGBUILD
+++ b/BioArchLinux/phylip/PKGBUILD
@@ -6,8 +6,8 @@ pkgver=3.698
 pkgrel=5
 pkgdesc="A collection of programmes for evolutive genetics and inferring phylogenies. https://doi.org/10.1111/j.1096-0031.1989.tb00562.x"
 arch=('i686' 'x86_64')
-url="http://evolution.genetics.washington.edu/phylip.html"
-source=(http://evolution.gs.washington.edu/phylip/download/phylip-$pkgver.zip
+url="https://github.com/felsenst/phylip"
+source=(https://github.com/phylipweb/phylip/raw/main/download/phylip-$pkgver.zip
         phylip-3.698-makefile.patch
         phylip-3.698-fno-common.patch)
 optdepends=('java-runtime')
